@@ -36,5 +36,5 @@ Request_Access_Company2(X, Y)
     holds(X, Accessible, Company2);
 
 /* queries */
-is holds(S, Accessible, Object2) after Request_Access_Company1(S, Object1);
-is holds(S, Accessible, Object1) after Request_Access_Company2(S, Object2);
+query holds(S, Accessible, Object2) after Request_Access_Company1(S, Object1);
+query holds(S, Accessible, Object1) after Request_Access_Company2(S, Object2);
